@@ -2,6 +2,9 @@ package Core;
 import Utilities.Type;
 import Utilities.Direction;
 import Utilities.Color;
+
+import java.util.List;
+
 public class Token {
     private int tokenId;
 
@@ -9,24 +12,20 @@ public class Token {
 
     private Cell currentCell;
 
-    private Direction direction;
+    //i will add this to make sure that every token move 52 block
+    private  int totalDiceRolSum;
 
-    public Token(int tokenId, Player owner, Cell currentCell) {
+    public Token(int tokenId, Cell currentCell) {
         this.tokenId = tokenId;
-        this.owner = owner;
+        this.owner = null;
         this.currentCell = currentCell;
-        if(Color.RED.equals(owner.getColor())){
-            this.direction = Direction.RIGHT;// Default direction
-        }
-        else if(Color.YELLOW.equals(owner.getColor())){
-            this.direction = Direction.LEFT;
-        }
-
+        this.totalDiceRolSum = 0;
     }
 
     public int getTokenId() {
         return tokenId;
     }
+
 
     public void setTokenId(int tokenId) {
         this.tokenId = tokenId;
@@ -47,176 +46,129 @@ public class Token {
     public void setCurrentCell(Cell currentCell) {
         this.currentCell = currentCell;
     }
-    // boolean isThereTokenInBoard = ;
-    // Check if the token can move based on the current dice roll
-    public boolean canMove(int diceRoll, Board board) {
-        System.out.println(currentCell.getType());
-        // Rule 1: No token can move from home unless a 6 is rolled
 
-        if (this.currentCell.getType() == Type.HOME && diceRoll == 6) {
+//    public void initializeTokensInHome(Player player) {
+//
+//        List<Token> tokens = player.getTokens();
+//        Color playerColor = player.getColor();
+//        int tokenIndex = 0;
+//
+//        for (int i = 0; i < rows; i++) {
+//            for (int j = 0; j < cols; j++) {
+//                // Assign tokens to the first four `HOME` cells of the player's color
+//                if (grid[i][j].getType() == Type.HOME && grid[i][j].getColor() == playerColor) {
+//                    if (tokenIndex < tokens.size()) {
+//                        Token token = tokens.get(tokenIndex);
+//                        token.setCurrentCell(grid[i][j]);
+//                        grid[i][j].addToken(token);
+//                        tokenIndex++;
+//                    }
+//                }
+//            }
+//        }
+//    }
+
+
+    public boolean canMove(int diceRoll, Board board) {
+        if (currentCell.isHome()) {
+            // Token is in home, can only move if diceRoll == 6
+            return diceRoll == 6;
+        }
+
+        int currentPos = getCurrentCellIndex(board);
+        int targetPos = (currentPos + diceRoll) % 52;
+
+        // Check for end zone entry
+        if (totalDiceRolSum == 52) {
+//        if (isEnteringEndZone(diceRoll, board)) {
             return true;
         }
-        if (this.currentCell.getType() == Type.HOME && diceRoll != 6) {
-            return false;
-        }
 
-        // Rule 2: Token must be able to move the exact number of steps
-        int targetX = currentCell.getPosX() + diceRoll;
-        int targetY = currentCell.getPosY();
-        if (targetX >= board.getBoard().length) {
-            return false;
-        }
-        //Rule3 and Rule4
-        Cell targetCell = board.getBoard()[targetX];
-        /*if (targetCell.getTokens().size() >= 2) {
-            // Condition 1: If we're landing on that cell, send all tokens home
-            if (targetX == currentCell.getPosX() + diceRoll) {
-                // Send all tokens on that cell back to home
-                for (Token token : targetCell.getTokens()) {
-                    token.resetToHome();
-                }
-
-                return true;
-            }
-            // Condition 2: If we're passing this cell, return false (blocked)
-            else if(targetX >= currentCell.getPosX() + diceRoll){
+        // Check for blockages on the path
+        for (int i = 1; i <= diceRoll; i++) {
+            int intermediatePos = (currentPos + i) % 52;
+            Cell cell = board.getBoard()[intermediatePos];
+            if (cell.getTokens().stream().filter(t -> t.getOwner().equals(owner)).count() >= 2) {
+                // Two tokens of the same color are blocking the path
                 return false;
             }
-            else{
-                return  true;
-            }
-        }*/
+        }
 
         return true;
     }
+    public void moveToken(int diceRoll, Board board) {
+        if (!canMove(diceRoll, board)) {
+            System.out.println("Token cannot move.");
+            return;
+        }
 
-    public void moveToken(int steps, Board board) {
-        if(Color.RED.equals(owner.getColor())) {
+        int currentPos = getCurrentCellIndex(board);
+        //int targetPos = (currentPos + diceRoll);
+        int targetPos = (currentPos + diceRoll) % 52;
+        System.out.println("Current position: " + currentPos);
+        System.out.println("Target position: " + targetPos);
+        if (totalDiceRolSum == 52) {
+//        if (isEnteringEndZone(diceRoll, board)) {
+            // Move into end zone
+            moveToEndZone(diceRoll, board);
+        } else {
+            // Move normally
+           board.getBoard()[currentPos].removeToken(this);
+            board.getBoard()[targetPos].addToken(this);
+            currentCell = board.getBoard()[targetPos];
+            totalDiceRolSum +=diceRoll;
+            board.printBoard();
+        }
 
+        // Check for killing other tokens
+        killTokensOnCell(board.getBoard()[targetPos]);
+    }
 
-            if (this.currentCell.getType() == Type.HOME && steps == 6) {
+//    private boolean isEnteringEndZone(int diceRoll, Board board) {
+//        int currentPos = getCurrentCellIndex(board);
+//        int targetPos = (currentPos + diceRoll) % 52;
+//        int endZoneStart = board.playerStartPositions[owner.getId()]; // End zone starts at the player's start position
+//        return currentPos < endZoneStart && targetPos >= endZoneStart;
+//    }
 
-                int newX = 5, newY = 1;
-                Cell nextCell = board.getBoard()[newX];
+    private void moveToEndZone(int diceRoll, Board board) {
+        int currentDepth = getEndZoneDepth();
+        int newDepth = currentDepth + diceRoll;
 
-                // Update token position
-                currentCell.removeToken(this);
-                nextCell.addToken(this);
-                currentCell = nextCell;
+        if (newDepth <= 6) {
+            // Move deeper into the end zone
+            currentCell = new Cell(currentCell.getPosX(), currentCell.getPosY(), Type.GOAL, owner.getColor());
+            System.out.println("Token moved into the end zone at depth: " + newDepth);
+        } else {
+            System.out.println("Cannot move token into the end zone.");
+        }
+    }
 
-            } else {
-                for (int i = 0; i < steps; i++) {
-                    int posX = currentCell.getPosX();
-                    int posY = currentCell.getPosY();
-                    //------------------------------------------------zak
+    private void killTokensOnCell(Cell cell) {
+        // Remove all tokens of other colors on the cell
+        cell.getTokens().removeIf(t -> !t.getOwner().equals(owner));
+    }
 
-                    // Check board boundaries and adjust direction if needed
-                    if (posX == 0 && direction == Direction.TOP) direction = Direction.RIGHT;
-                    if (posY == 0 && direction == Direction.LEFT) direction = Direction.TOP;
-                    if (posX == board.getBoard().length - 1 && direction == Direction.BOTTOM)
-                        direction = Direction.LEFT;
-                    if (posY == board.getBoard().length - 1 && direction == Direction.RIGHT)
-                        direction = Direction.BOTTOM;
-
-                    int newX = posX, newY = posY;
-
-                    // Determine the next cell based on direction
-                    switch (direction) {
-
-                        case LEFT:{
-                            newY--;
-                            break;}
-                        case RIGHT:{
-                            newY++;
-                            break;}
-                        case TOP:{
-                            newX--;
-                            break;}
-                        case BOTTOM:{
-                            newX++;
-                            break;}
-                    }
-                    System.out.println(newX + newY);
-                    // Ensure within bounds
-                    if (newX < 0 || newX >= board.getBoard().length || newY < 0 || newY >= board.getBoard().length) {
-                        throw new IllegalStateException("Token moved out of bounds. Check logic.");
-                    }
-
-                    Cell nextCell = board.getBoard()[newX];
-
-                    // Handle cell logic based on type or color
-                    if (!"\uD83D\uDFE5".equals(nextCell.getText())) { // Not a red cell
-                        if ("⬛".equals(nextCell.getText())) {
-                            // Handle black cell logic
-                            switch (direction) {
-                                case LEFT:
-                                    newX--;
-                                    newY++;
-                                    direction = Direction.TOP;
-                                    break;
-                                case TOP:
-                                    newX++;
-                                    newY++;
-                                    direction = Direction.RIGHT;
-                                    break;
-                                case RIGHT:
-                                    newX++;
-                                    newY--;
-                                    direction = Direction.BOTTOM;
-                                    break;
-                                case BOTTOM:
-                                    newX--;
-                                    newY--;
-                                    direction = Direction.LEFT;
-                                    break;
-                            }
-                        } else {
-                            // Handle non-black, non-red cell logic
-                            switch (direction) {
-                                case LEFT:
-                                    newY--;
-                                    direction = Direction.BOTTOM;
-                                    break;
-                                case TOP:
-                                    newX--;
-                                    direction = Direction.LEFT;
-                                    break;
-                                case RIGHT:
-                                    newY++;
-                                    direction = Direction.TOP;
-                                    break;
-                                case BOTTOM:
-                                    newX++;
-                                    direction = Direction.RIGHT;
-                                    break;
-                            }
-                        }
-                    }
-
-                    // Update token position
-                    currentCell.removeToken(this);
-                    nextCell.addToken(this);
-                    currentCell = nextCell;
-
-                    // Print token move
-                    System.out.printf("%s's Token %d moved to (%d, %d) in direction %s%n",
-                            owner.getName(), tokenId, currentCell.getPosX(), currentCell.getPosY(), direction);
-
-                    // Print the board
-                    board.printBoard();
-                }
+    private int getCurrentCellIndex(Board board) {
+        for (int i = 0; i < board.getBoard().length; i++) {
+            if (board.getBoard()[i].equals(currentCell)) {
+                return i;
             }
         }
-        else {
-            //here the yllow logic
-        }
+        return -1; // Not found
+    }
+
+    private int getEndZoneDepth() {
+        // Calculate the depth in the end zone (e.g., based on the cell's position)
+        return 0; // Placeholder, implement as needed
     }
 
     public void resetToHome() {
         // Reset token to its home cell
         currentCell.removeToken(this);
-        Cell homeCell = owner.getTokens().get(0).getCurrentCell(); // Assuming the first token's cell is home
+        Cell homeCell = owner.getTokens().getFirst().getCurrentCell(); // Assuming the first token's cell is home
         homeCell.addToken(this);
         currentCell = homeCell;
     }
+
 }
